# my2d_project

./: .gitignore  CMakeLists.txt  GEA_ResourceMgr.dia  README.md  interface.h
CMake/Modules/: FindDirectX11.cmake  FindFmod.cmake  FindLua.cmake  FindZiplib.cmake  FindZlib.cmake
DynamicLoader/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Include/: EngineMain.h
Engine/Shared/: CMakeLists.txt
Engine/Shared/Source/: Rectangle.cpp
Jamgine/: CMakeLists.txt
Jamgine/DirectX11/: CMakeLists.txt
Jamgine/DirectX11/Include/: DirectXEngine.h
Jamgine/DirectX11/Source/: DirectXEngine.cpp
Jamgine/Include/: Camera.h  CameraStruct.h  ContentManager.h  ErrorMessage.h  JCamera.h  JDXTextureConverter.h  JFloat3.h  JFloat4.h  JPackageHandler.h  JResourceManager.h  JSharedContext.h  JTejpPackageHandler.h  JTextureConverter.h  JTextureImporter.h  JWinResourceManager.h  JZipPackageHandler.h  Jamgine.h  Rectangle.h  Shared.h  Subsystem.h  Texture2D.h  Texture2DInterface.h  Texture2DManagerInterface.h
Jamgine/Include/DDSTextureLoader/: DDSTextureLoader.h
Jamgine/Include/DirectX/: DirectXEngine.h  DirectXShared.h  JDirectXCamera.h  JDirectXCamera2.h  JDirectXDataSend.h  JDirectXEngine.h  JDirectXShared.h  JDirectXTexture2D.h  JDirectXTexture2DManager.h  Node.h  SpriteData.h
Jamgine/Include/Implementation/: JamgineImplementation.h
Jamgine/Include/MemoryAllocator/: MemPool.h  MemoryAllocator.h  MemoryStack.h  SingleFrameStack.h  StackAllocator.h
Jamgine/Include/Shader/: ShaderLoader.h
Jamgine/Include/Shared/: JFloat2.h  JFloat4.h  Point.h  Rectangle.h  SpriteEffect.h  Spritedata.h
Jamgine/Include/Texture/: Texture2D.h  Texture2DInterface.h  Texture2DManager.h
Jamgine/Memory/: CMakeLists.txt
Jamgine/Memory/Include/: JMemorySubsystem.h  MemPool.h  SingleFrameStack.h  StackAllocator.h
Jamgine/Memory/Include/Implementation/: JMemoryImplementation.h
Jamgine/Memory/Source/: JMemorySubsystem.cpp  MemoryAllocator.cpp  SingleFrameStack.cpp  StackAllocator.cpp
Jamgine/Memory/Source/Implementation/: JMemoryImplementation.cpp
Jamgine/OpenGL/: CMakeLists.txt
Jamgine/Render/: CMakeLists.txt
Jamgine/Render/Include/: JCamera.h  JRenderSubSystem.h  SpriteEffect.h  Spritedata.h  Texture2D.h
Jamgine/Render/Include/DDSTextureLoader/: DDSTextureLoader.h
Jamgine/Render/Include/DirectX/: JDirectXDataSend.h  JDirectXEngine.h  JDirectXShared.h  JDirectXTexture2D.h  JDirectXTexture2DManager.h
Jamgine/Render/Include/Implementation/DirectX/: JDirectXCamera.h  JDirectXDataSend.h  JDirectXRender.h  JDirectXTexture2DManager.h
Jamgine/Render/Include/Shader/: ShaderLoader.h
Jamgine/Render/Source/: JRenderSubSystem.cpp
Jamgine/Render/Source/DDSTextureLoader/: DDSTextureLoader.cpp
Jamgine/Render/Source/DirectX/: JDirectXCamera.cpp  JDirectXEngine.cpp  JDirectXTexture2D.cpp  JDirectXTexture2DManager.cpp
Jamgine/Render/Source/Implementation/DirectX/: JDirectXCamera.cpp  JDirectXRender.cpp  JDirectXTexture2D.cpp  JDirectXTexture2DManager.cpp
Jamgine/Render/Source/Shader/: ShaderLoader.cpp
Jamgine/Shader/: GeometryShader.hlsl  PixelShader.hlsl  Util.fx  VertexShader.hlsl
Jamgine/Source/: CMakeLists.txt  Camera.cpp  ContentManager.cpp  DirectXEngine.cpp  JDXTextureConverter.cpp  JResourceManager.cpp  JSharedContext.cpp  JTejpPackageHandler.cpp  JTextureImporter.cpp  JWinResourceManager.cpp  JZipPackageHandler.cpp  Jamgine.cpp  Rectangle.cpp  Texture2D.cpp
Jamgine/Source/DDSTextureLoader/: DDSTextureLoader.cpp
Jamgine/Source/DirectX/: DirectXEngine.cpp  JDirectXCamera.cpp  JDirectXCamera2.cpp  JDirectXEngine.cpp  JDirectXTexture2D.cpp  JDirectXTexture2DManager.cpp  Node.cpp
Jamgine/Source/MemoryAllocator/: MemoryAllocator.cpp  MemoryStack.cpp  SingleFrameStack.cpp  StackAllocator.cpp
Jamgine/Source/Shader/: ShaderLoader.cpp
Jamgine/Source/Texture/: Texture2D.cpp  Texture2DInterface.cpp  Texture2DManager.cpp
Lua/: CMakeLists.txt
LuaModule/: CMakeLists.txt
LuaModule/Include/: LuaManager.h
LuaModule/Source/: LuaManager.cpp
LuaScript/: CMakeLists.txt
LuaScript/Include/: LuaManager.h
LuaScript/Source/: LuaManager.cpp
SubsystemTest/: CMakeLists.txt
SubsystemTest/Include/: Math1.h  Math1.hpp
SubsystemTest/Source/: Math1.cpp
Tejp/: Tejp.py  fnndon.silvertejp  numerodos.silvertejp  numerotres.silvertejp  tearadad.silvertejp  tejptest.silvertejp
TestGame/: CMakeLists.txt
TestGame/Include/: Jamgame.h  Level.h  Node.h  XBOXController.h
TestGame/Include/Entity/: AnimationEntity.h  CollisionEntity.h  EnemyEntity.h  EntityFactory.h  GameEntity.h  PlayerEntity.h  ProjectileEntity.h  RenderEntity.h  WallEntity.h
TestGame/Include/Scene/: BaseScene.h  EditScene.h  GameScene.h  MainMenuScene.h  SceneManager.h  SceneManagerInteface.h  SceneManagerInterface.h  SceneState.h
TestGame/Include/Sound/: FMODHandler.h  SoundHandler.h  SoundSource.h  fmod.hpp  fmod_dsp.h
TestGame/Source/: GameTimer.cpp  Jamgame.cpp  Level.cpp  Node.cpp  XBOXController.cpp  main.cpp
TestGame/Source/Entity/: AnimationEntity.cpp  CollisionEntity.cpp  EnemyEntity.cpp  EntityFactory.cpp  GameEntity.cpp  PlayerEntity.cpp  ProjectileEntity.cpp  RenderEntity.cpp  WallEntity.cpp
TestGame/Source/Scene/: BaseScene.cpp  EditScene.cpp  GameScene.cpp  MainMenuScene.cpp  SceneManager.cpp
TestGame/Source/Sound/: FMODHandler.cpp  SoundHandler.cpp  SoundSource.cpp
ZipLib/: CMakeLists.txt
ZipLib/compression/deflate/: deflate_decoder.h
ZipLib/streams/streambuffs/: crc32_streambuf.h
bzip2/: CMakeLists.txt
lzma/: CMakeLists.txt
resources/: Box3.dds  Circle.dds  EditScreenButton.dds  GeometryShader.hlsl  VertexShader.hlsl  dirt_texture.dds  test.tejp  tiled_grass_top.dds
resources/HLSL/: GeometryShader.hlsl  PixelShader.hlsl  Util.fx  VertexShader.hlsl
resources/Level/: Level.lvl
resources/Texture/: Alpha.dds  Player.dds  SQUARE.dds  SpaceShip.dds  Thumbs.db  ball.dds  pow.dds
resources/script/: Move.lua  Test.lua
zlib/: CMakeLists.txt
